src/objects/SPE_ConsequenceManagement__c.object
<CustomObject>
    <fields>
        <fullName>Owner_Approval__c</fullName>
        <label>Nokia Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blank</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner_Comments__c</fullName>
        <label>Nokia Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <formula>Contact__r.Password__c</formula>
        <label>Password</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Month__c</fullName>
        <inlineHelpText>Enter the Month for fetching the Audit data.  This should match the desired monthly period for the KPI data to be used with the Audit Year</inlineHelpText>
        <label>Audit Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Year__c</fullName>
        <inlineHelpText>Enter the Year for fetching the Audit data.  This should correspond to the year for which the KPI is desired. To be used together with the Audit Month</inlineHelpText>
        <label>Audit Year</label>
        <picklist>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PreventiveActionInstructions__c</fullName>
        <formula>KPIName__r.PreventiveActionInstructions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preventive Action Instructions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProblemDescriptionDetails__c</fullName>
        <label>Problem Description &amp; Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Problem_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For further Action Please Check this field if Poblem Analysis is completed.</inlineHelpText>
        <label>Problem Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product1__c</fullName>
        <label>Product1</label>
        <picklist>
            <picklistValues>
                <fullName>ATCA BLADE HARDWARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATCA EMBEDDED SOFTWARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATCA HW PLATFORM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BROWSING GATEWAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPX5000 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIRCUIT SWITCHED DATA SERVER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMMUNICATION SUITE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMPACT DX MSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORE PACKET GATEWAY @VANTAGE CPG-3200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORE PACKET GATEWAY @VANTAGE CPG-3200 HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORE PACKET GATEWAY @VANTAGE CPG-3200 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORE PACKET GATEWAY @VANTAGE CPG-3300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORE PACKET GATEWAY @VANTAGE CPG-3300 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORE PACKET ROUTER @VANTAGE CPR-3200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORE PACKET ROUTER @VANTAGE CPR-3200 HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORE PACKET ROUTER @VANTAGE CPR-3200 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORE PACKET ROUTER @VANTAGE CPR-3300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORE PACKET ROUTER @VANTAGE CPR-3300 HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORE PACKET ROUTER @VANTAGE CPR-3300 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAXNODE 5000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DX 200 PLATFORM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DX 200 RSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DX 210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DX 210 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DX 220 COMPACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DX MSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DXT HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DXT PLATFORM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DXT SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FMA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <label>Product2</label>
        <picklist>
            <picklistValues>
                <fullName>A-SERIES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-100 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-2100 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-8100 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-1180 MP SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-1180 TM SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-1200 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-1200-X SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-1210 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-210 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-2140 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-2200 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-4100 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-1180A-SERIES A-1180</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-1180 MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-1180 TM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-1200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-1200-X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-1210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-2100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-2140</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-2200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-4100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-8100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-8100 (OLD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACI-E</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product3__c</fullName>
        <label>Product3</label>
        <picklist>
            <picklistValues>
                <fullName>SURPASS HIG1100 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SURPASS HIR 200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SURPASS HIR 220</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SURPASS HIR200 HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SURPASS HIR200 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWITCH COMMANDER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWITCH COMMANDER HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWITCH COMMANDER OEM SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWITCH COMMANDER SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDM SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VOIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WINDISKUS SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIE 9200 S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIE9200 CCGE HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIE9200 CP113E HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIE9200 LTGP HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIE9200 MBD HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIE9200 MCP HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIE9200 PM HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIE9200 SND HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIE9200 SSNC HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIE9200 STMI HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIE9200 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIG 1600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIG 1600 HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIG 1600 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIG 1800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIG 1800 HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIG 1800 SW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCAInstructions__c</fullName>
        <formula>KPIName__r.RCAInstructions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RCA Instructions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RampDownUp__c</fullName>
        <description>This is used on Phase out plan to Ramp Up/Down against Supplier</description>
        <inlineHelpText>This is used on Phase out plan to Ramp Up/Down against Supplier</inlineHelpText>
        <label>Ramp Down/Up</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReadyToBeClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ReadyToBeClosed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPEPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPE Plan</label>
        <referenceTo>SPE_SPEPlan__c</referenceTo>
        <relationshipLabel>Consequence Management</relationshipLabel>
        <relationshipName>Consequence_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SPETracker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPE Tracker</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SPE_SPETracker__c.Status__c</field>
                <operation>equals</operation>
                <value>Pending, Completed</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SPE_SPETracker__c</referenceTo>
        <relationshipLabel>Consequence Managements</relationshipLabel>
        <relationshipName>Consequence_Managements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SPE_Status__c</fullName>
        <label>SPE Status</label>
        <picklist>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Trouble Found</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StakeholderCommunicationActual__c</fullName>
        <description>Section - Phase out Status</description>
        <label>Stakeholder Communication Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StakeholderCommunicationTarget__c</fullName>
        <description>Section - Phase out Plan</description>
        <label>Stakeholder Communication target</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Summary_spe__c</fullName>
        <label>Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SupplierComments__c</fullName>
        <inlineHelpText>Supplier may supply additional details in regards to fault assignment</inlineHelpText>
        <label>Supplier Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SupplierContactEmail__c</fullName>
        <label>Supplier Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SupplierFaultAssumptionComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supplier Fault Assumption Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SupplierManagerContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PPM/CM</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Consequence Managements (Supplier Manager Contact)</relationshipLabel>
        <relationshipName>Consequence_Managements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SupplierManager__c</fullName>
        <label>Supplier Manager</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SupplierReason__c</fullName>
        <label>Supplier Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SupplierReminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to send reminder to supplier if Supplier did not get Email notification on Develop ticket</description>
        <inlineHelpText>This field is used to send reminder to supplier if Supplier did not get Email notification on Develop ticket</inlineHelpText>
        <label>Supplier Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplier_Accepts_Fault__c</fullName>
        <inlineHelpText>Signals that supplier has unequivocally accepted fault for this issue</inlineHelpText>
        <label>Supplier Accepts Fault?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>no</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blank</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplier_Address_Value__c</fullName>
        <inlineHelpText>System will display the supplier address based on the matching scopes and suppliers for the period selected.</inlineHelpText>
        <label>Supplier Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Address</label>
        <referenceTo>SPE_KPIDefinition__c</referenceTo>
        <relationshipLabel>Consequence Management (Supplier Address)</relationshipLabel>
        <relationshipName>Consequence_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier_Val__c</fullName>
        <label>Supplier name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Supplier that is the focus of this case</inlineHelpText>
        <label>Enterprise ID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.ParentId</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Consequence Managements</relationshipLabel>
        <relationshipName>Consequence_Managements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier_name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier name</label>
        <referenceTo>SPE_KPIDefinition__c</referenceTo>
        <relationshipLabel>Consequence Management (Supplier name)</relationshipLabel>
        <relationshipName>Consequence_Management3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SurveyCommentInclusion__c</fullName>
        <label>Survey Comment Inclusion</label>
        <picklist>
            <picklistValues>
                <fullName>OFF</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>ON</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SurveyCommentsReview__c</fullName>
        <label>Survey Comments Review</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TicketStatus__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Trouble Found</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Consequence Management Name</description>
        <inlineHelpText>Consequence Management Name</inlineHelpText>
        <label>Title</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackerValue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tracker Value</label>
        <referenceTo>SPE_TrackerValues__c</referenceTo>
        <relationshipLabel>Consequence Management</relationshipLabel>
        <relationshipName>Consequence_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Develop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Watchlist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VolumeReductionActualDate_100__c</fullName>
        <description>Section - Phase out Status</description>
        <label>Volume Reduction Actual Date (100%)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VolumeReductionActualDate_50__c</fullName>
        <description>Section - Phase out Status</description>
        <label>Volume Reduction Actual Date (50%)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VolumeReductionTargetDate_100__c</fullName>
        <description>Section - Phase out Plan</description>
        <label>Volume reduction target date (100%)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VolumeReductionTargetDate_50__c</fullName>
        <description>Section - Phase out Plan</description>
        <label>Volume reduction target date (50%)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2DDaysAllowed__c</fullName>
        <formula>X2DDueDate__c -  DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2DDueDate__c</fullName>
        <defaultValue>TODAY() + 15</defaultValue>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X3DDaysAllowed__c</fullName>
        <formula>X3DDueDate__c -  DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3DDueDate__c</fullName>
        <defaultValue>TODAY()  + 5</defaultValue>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X3DManufacturerResponse__c</fullName>
        <label>Supplier Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X3DOwnerApproveReject__c</fullName>
        <label>Nokia Approve / Reject</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X3DOwnerResponse__c</fullName>
        <label>Nokia Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X3DSupplierContributors__c</fullName>
        <label>Supplier Contributor(s)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3DSupplierResponseCompleteDate__c</fullName>
        <label>Supplier Response Complete Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X3DSupplierResponseComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Root cause Supplier Response Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X4DDaysAllowed__c</fullName>
        <formula>X4DDueDate__c -  DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X4DDueDate__c</fullName>
        <defaultValue>TODAY()  + 30</defaultValue>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X4DOwnerApproveReject__c</fullName>
        <label>Nokia Approve / Reject</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X4DOwnerResponse__c</fullName>
        <label>Nokia Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X4DSupplierContributors__c</fullName>
        <label>Supplier Contributor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X4DSupplierResponseCompleteDate__c</fullName>
        <label>Supplier Response Complete Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X4DSupplierResponseComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corrective Supplier Response Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X4DSupplierResponse__c</fullName>
        <label>Supplier Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X5DOwnerApproveReject__c</fullName>
        <label>Nokia Approve / Reject</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X5DOwnerResponse__c</fullName>
        <label>Nokia Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X5DSupplierContributors__c</fullName>
        <label>Supplier Contributor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X5DSupplierResponseCompleteDate__c</fullName>
        <label>Supplier Response Complete Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X5DSupplierResponseComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verification Supplier Response Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X5DSupplierResponse__c</fullName>
        <label>Supplier Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Consequence Management</label>
    <listViews>
        <fullName>New_View</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>TicketStatus__c</columns>
        <columns>SPETracker__c</columns>
        <columns>KPITitle__c</columns>
        <columns>KPIName__c</columns>
        <columns>Supplier__c</columns>
        <columns>SurveyCommentsReview__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CM-{00000}</displayFormat>
        <label>Consequence Management ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consequence Management</pluralLabel>
    <recordTypes>
        <fullName>Audit</fullName>
        <active>true</active>
        <label>Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Audit_NC</fullName>
        <active>true</active>
        <label>Audit NC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Develop</fullName>
        <active>true</active>
        <label>Develop</label>
    </recordTypes>
    <recordTypes>
        <fullName>Phase_Out</fullName>
        <active>true</active>
        <label>Phase Out</label>
    </recordTypes>
    <recordTypes>
        <fullName>Watchlist</fullName>
        <active>true</active>
        <label>Watchlist</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SPE_ContactValidationRule</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( OR( Problem_Analysis_Completed__c =True, X3DSupplierResponseComplete__c = True,  X4DSupplierResponseComplete__c = True,  X5DSupplierResponseComplete__c = True,  SupplierFaultAssumptionComplete__c = True) ,  ISBLANK( Contact__c ),(RecordType.Name = &apos;Develop&apos;))</errorConditionFormula>
        <errorMessage>Contact Field can&apos;t be empty. In case your response is completed.Please Fill supplier Contact details by clicking Add Supplier Contact button.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SPE_DueDateValidation</fullName>
        <active>false</active>
        <description>Due Date should be less than created date</description>
        <errorConditionFormula>OR( X2DDueDate__c  &lt; DATEVALUE(CreatedDate), 
X3DDueDate__c  &lt;  DATEVALUE(CreatedDate),
X4DDueDate__c &lt;  DATEVALUE(CreatedDate), 
X5DDueDate__c &lt;  DATEVALUE(CreatedDate))</errorConditionFormula>
        <errorMessage>Due Date can&apos;t be less than created date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SPE_FunctionalityCheckValidation</fullName>
        <active>true</active>
        <errorConditionFormula>OR( AND( SupplierFaultAssumptionComplete__c  = False , ISPICKVAL(   OwnerApproval__c , &quot;Approve&quot; ) ),
AND(  X3DSupplierResponseComplete__c   = False , 
ISPICKVAL(   X3DOwnerApproveReject__c  , &quot;Approve&quot; ) ), 
AND(  X4DSupplierResponseComplete__c   = False , 
ISPICKVAL(   X4DOwnerApproveReject__c  , &quot;Approve&quot; ) ),
AND(  X5DSupplierResponseComplete__c  = False , 
ISPICKVAL(   X5DOwnerApproveReject__c  , &quot;Approve&quot; ) )  
)</errorConditionFormula>
        <errorMessage>Response Is Not Completed Properly .</errorMessage>
    </validationRules>
</CustomObject>